# docreader

./: .gitignore  LICENSE  README.md  README_pypi.md  pyproject.toml
.github/workflows/: publish.yaml
src/docreader/: __init__.py  config.py  factory.py  hub.py  pipeline.py  schemas.py  types.py  utils.py
src/docreader/classifier/: __init__.py  base.py  mobilenet.py  yolo_classifier.py
src/docreader/detector/: __init__.py  base.py  yolo_obb.py
src/docreader/ocr/: __init__.py  base.py  easyocr_engine.py
src/docreader/preprocessing/: __init__.py  geometry.py
src/docreader/resolver/: __init__.py  base.py  lvl_resolver.py
tests/: check_models.py  debug_ocr.py  preannotate.py  run_eval.py  test_pipeline.py  test_run.py
tests/eval/: __init__.py  base.py  classifier_eval.py  detector_eval.py  ocr_eval.py  parsing.py  report.py
