[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docreader-ocr"
version = "0.2.4"
description = "Document OCR pipeline: classify → detect fields → recognize text"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mikhail Kardash", email = "mishutqac@mail.ru"},
    {name = "Ruslan Abzelilov", email = "ruslanr26@mail.ru"},
    {name = "Ekaterina Karmanova", email = "monitor81@mail.ru"}
]
keywords = ["ocr", "document", "recognition", "yolo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0",
    "easyocr>=1.7",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "requests>=2.28",
    "tqdm>=4.65",
    "RapidFuzz>=3.14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/mishanyacorleone/docreader"
Repository = "https://github.com/mishanyacorleone/docreader"
Issues = "https://github.com/mishanyacorleone/docreader/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/docreader"]